[package]
name = "bevy-fuel-tank"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy-inspector-egui = "0.13.0"
rand = "0.8.5"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
